Обновил правила валидаций.
